Display just the map when you request a ride  - map is a fixed height, not responsive

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -58,8 +58,12 @@
   margin-left: auto;
   margin-right: auto;
 }
+/*
+.well.bs-component {
+  height: 100%;
+}
 
 .map-view {
-  width: 90%;
-  height: 90%;
-}
+  height: 100%;
+}*/
+
